<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="x_o_bg">x-o-bg</string>
    <string name="x_s_move">X\'s Move</string>
    <string name="difficulty">Difficulty</string>
    <string name="mode">Mode</string>
    <string name="reset_button_text">reset</string>
    <string name="o_wins">o-wins</string>
    <string name="_0">0</string>
    <string name="draws">draws</string>
    <string name="x_wins">x-wins</string>
    <string name="three_by_three">3 x 3</string>
    <string name="five_by_five">5 x 5</string>
    <string name="o_s_move">O\'s Move</string>
    <string name="restart_button_text">restart</string>
    <string name="game_x_won">Game Over! X Won!</string>
    <string name="o_won">Game Kaput! o won! Touch Restart to play again</string>
    <string name="x_won">Game Kaput! x won! Touch Restart to play again</string>
    <string name="is_a_draw">Game over by draw. Touch Restart to play again</string>
</resources>
