<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dennis.tictactoe.MainActivity">

    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/dropdown_bg"
        android:elevation="@dimen/elevation"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/text_color" />

        <Spinner
            android:id="@+id/game-mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/difficulty"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/text_color" />

        <Spinner
            android:id="@+id/game-difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"></Spinner>

    </LinearLayout>

    <TextView
        android:id="@+id/whose-move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/o_s_move"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/text_color"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/boxes_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/whose-move"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:background="@drawable/image_bg"
            android:contentDescription="@string/x_o_bg" />

        <ImageView
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:layout_marginEnd="@dimen/margin_box"
            android:layout_marginStart="@dimen/margin_box"
            android:background="@drawable/image_bg"
            android:contentDescription="@string/x_o_bg" />

        <ImageView
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:background="@drawable/image_bg"
            android:contentDescription="@string/x_o_bg" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/boxes_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/boxes_1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:background="@drawable/image_bg"
            android:contentDescription="@string/x_o_bg" />

        <ImageView
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:layout_marginEnd="@dimen/margin_box"
            android:layout_marginStart="@dimen/margin_box"
            android:background="@drawable/image_bg"
            android:contentDescription="@string/x_o_bg" />

        <ImageView
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:background="@drawable/image_bg"
            android:contentDescription="@string/x_o_bg" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/boxes_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/boxes_2"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:background="@drawable/image_bg"
            android:contentDescription="@string/x_o_bg" />

        <ImageView
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:layout_marginEnd="@dimen/margin_box"
            android:layout_marginStart="@dimen/margin_box"
            android:background="@drawable/image_bg"
            android:contentDescription="@string/x_o_bg" />

        <ImageView
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:background="@drawable/image_bg"
            android:contentDescription="@string/x_o_bg" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/reset"
        android:layout_margin="8dp"
        android:elevation="@dimen/elevation"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/o_wins"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/score_text_size"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/o-wins"
            android:layout_width="@dimen/score_box_size"
            android:layout_height="@dimen/score_box_size"
            android:background="@drawable/dropdown_bg"
            android:gravity="center"
            android:text="0"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/score_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="draws"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/score_text_size"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/draws"
            android:layout_width="@dimen/score_box_size"
            android:layout_height="@dimen/score_box_size"
            android:background="@drawable/dropdown_bg"
            android:gravity="center"
            android:text="0"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/score_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="x-wins"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/score_text_size"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/x-wins"
            android:layout_width="@dimen/score_box_size"
            android:layout_height="@dimen/score_box_size"
            android:background="@drawable/dropdown_bg"
            android:gravity="center"
            android:text="0"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/score_text_size"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/btn_margin_btm"
        android:background="@drawable/button_bg"
        android:elevation="@dimen/elevation"
        android:text="@string/button_text"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#fff"
        android:textStyle="bold" />

</RelativeLayout>
